      patches). This should fix invalid _java_libarch detection on mipsel and
      armel (Closes: #544674).
    - FindGTK2_pangommconfig.diff - look for Pangomm Config include directory
      in FindGTK2.cmake (Closes: #579718). Thanks to Sune Vuorela for the
      patch.
  * Add gcc and make to cmake Suggests (Closes: #577516).

 -- Modestas Vainius <modax@debian.org>  Sat, 01 May 2010 22:25:55 +0300

cmake (2.8.1-2) unstable; urgency=low

  * Add kFreeBSD_fixes.diff patch to fix FTBFS on kfreebsd-* (failure of the
    CTestTestTimeout test).

 -- Modestas Vainius <modax@debian.org>  Thu, 18 Mar 2010 01:45:08 +0200

cmake (2.8.1-1) unstable; urgency=low

  * New upstream release.
  * Remove DMUA entry from debian/control. No longer needed.
  * Enable building in parallel (--parallel).
  * Update debian/patches:
    - drop bootstraptest_increase_timeout.diff - merged upstream;
    - hurd_platform.diff - adapt to upstream changes.
  * Forcefully set MINGW_CC_LINUX2WIN_EXECUTABLE to empty value. It breaks
    otherwise valid Simple_Mingw_Linux2Win test when ccache is enabled.
  * Update install files.
  * Update Standards-Version to 3.8.4: no changes needed.
  * Change my email address to modax@debian.org.

 -- Modestas Vainius <modax@debian.org>  Wed, 17 Mar 2010 17:51:38 +0200

cmake (2.8.0-5) unstable; urgency=low

  * Skip the unpredictably long and rather pointless BootstrapTest
    (Closes: #558001).

 -- Modestas Vainius <modestas@vainius.eu>  Thu, 26 Nov 2009 14:20:46 +0200

cmake (2.8.0-4) unstable; urgency=medium

  * Replace bootstraptest_increase_timeout.diff with upstream version. My
    previous patch didn't work.
  * Revert previous "Build with g++-4.4 on hppa" change. It was not needed, build
    with default compiler on hppa.
  * Remove obsolete hack for parisc64 from debian/rules. It didn't work after
    switch to dh v7 anyway.
  * It should build on hppa now (Closes: #556653). So urgency=medium.
