@@ -9,6 +9,8 @@ cmake (2.8.1-3) UNRELEASED; urgency=low
       in FindGTK2.cmake (Closes: #579718). Thanks to Sune Vuorela for the
       patch.
   * Add gcc and make to cmake Suggests (Closes: #577516).
+  * Rename (to kFreeBSD_Hurd_fixes.diff) and improve kFreeBSD_fixes.diff to fix
+    FTBFS on GNU/Hurd as well.
 
  -- Modestas Vainius <modax@debian.org>  Sat, 01 May 2010 22:25:55 +0300
 
